<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dev.akexorcist.adaptivescrolling.view.AdaptiveVerticalScrollLayout
        android:id="@+id/adaptive_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="32dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_pin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vertical_weight_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_pin_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_view_pin_dot_1"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_pin_dot_empty" />

                <ImageView
                    android:id="@+id/image_view_pin_dot_2"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_pin_dot_empty" />

                <ImageView
                    android:id="@+id/image_view_pin_dot_3"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_pin_dot_empty" />

                <ImageView
                    android:id="@+id/image_view_pin_dot_4"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_pin_dot_empty" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="96dp" />

            <GridLayout
                android:id="@+id/grid_layout_pin_keypad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3">

                <Button
                    android:id="@+id/button_pin_1"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:text="1"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_2"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:text="2"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_3"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:text="3"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_4"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    android:text="4"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_5"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="5"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_6"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="6"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_7"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp"
                    android:text="7"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_8"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="8"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_9"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="9"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Space
                    android:id="@+id/space_empty"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_column="0"
                    android:layout_marginTop="16dp"
                    android:text="0"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_0"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_column="1"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="0"
                    android:textSize="32sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/button_pin_delete"
                    style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_column="2"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/vertical_weight_delete"
                    android:textSize="20sp" />
            </GridLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </dev.akexorcist.adaptivescrolling.view.AdaptiveVerticalScrollLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_back"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_description_back_button"
        app:icon="@drawable/ic_back" />
</FrameLayout>
